--- a/gradle.properties
+++ b/gradle.properties
@@ -14,3 +14,4 @@
 # org.gradle.parallel=true
 #Mon Jun 20 21:44:59 EDT 2016
 android.useDeprecatedNdk=true
+org.gradle.jvmargs=-Xmx2048m -XX:MaxPermSize=512m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
