Revert "Fix libevent install path for latest Tor"
This reverts commit e5da5ed7313b4d4913d06d17e5fe21a01ad3c007.

--- a/external/Makefile
+++ b/external/Makefile
@@ -186,15 +186,13 @@ libevent-build-stamp: libevent/Makefile
 	touch libevent-build-stamp
 
 libevent: openssl libevent-build-stamp
-	test -d lib/.libs || mkdir -p lib/.libs
+	test -d lib || mkdir lib
 	test -d include || mkdir include
-	cp libevent/.libs/libevent.a lib/.libs/
-	ln -s .libs/libevent.a lib/libevent.a
+	cp libevent/.libs/libevent.a lib
 	cp -R libevent/include/event2 include
 
 libevent-clean:
 	-rm -rf include/event2
-	-rm -f lib/.libs/libevent.a
 	-rm -f lib/libevent.a
 	-rm -f libevent-build-stamp
 	-cd libevent && \
