--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,7 @@ buildscript {
         kotlin_version = '1.5.31'
     }
     repositories {
+        maven { url '/media/delta/T5/android/orbot-latest/maven' }
         mavenCentral()
         google()
         maven { url 'https://jitpack.io' }
@@ -17,6 +18,7 @@ buildscript {
 
 allprojects {
     repositories {
+        maven { url '/media/delta/T5/android/orbot-latest/maven' }
         mavenCentral()
         google()
         maven { url 'https://jitpack.io' }
