Update geoip files to 0.4.7.11

--- a/orbotservice/build.gradle
+++ b/orbotservice/build.gradle
@@ -50,12 +50,13 @@ dependencies {
             libs.androidx_localbroadcast,
    //         libs.ipt_proxy,
             libs.guardian_jsocks,
+            libs.guardian_geoip,
             libs.portmapper,
       //      libs.tor_android,
             libs.pcap_core,
             libs.pcap_factory
     )
 
-    implementation files('../libs/geoip.jar')
+    //implementation files('../libs/geoip.jar')
 
 }
