--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -18,6 +18,7 @@ ext {
             apl_appintro                 : "v4.2.3",
             bclogic_pulsator             : "1.0.3",
             fastlane_screengrab          : "1.2.0",
+            guardian_geoip               : "0.4.7.11",
             guardian_jsocks              : "1.0.4",
             guardian_jtorctl             : "0.4.7.11",
             ipt_proxy                    : "1.8.1",
@@ -47,6 +48,7 @@ ext {
             apl_appintro                   : "com.github.apl-devs:appintro:$versions.apl_appintro",
             bclogic_pulsator               : "pl.bclogic:pulsator4droid:$versions.bclogic_pulsator",
             fastlane_screengrab            : "tools.fastlane:screengrab:$versions.fastlane_screengrab",
+            guardian_geoip                 : "info.guardianproject:geoip:$versions.guardian_geoip",
             guardian_jsocks                : "com.gitlab.guardianproject:jsocksAndroid:$versions.guardian_jsocks",
             guardian_jtorctl               : "info.guardianproject:jtorctl:$versions.guardian_jtorctl",
       //      ipt_proxy                      : "com.github.bitmold:OrbotIPtProxy:$versions.ipt_proxy",
