ui: prevent activty from being killed
Clearing orbot activity from "Recents" makes the tor service disconnect
from Orbot's UI.

--- a/app-mini/src/main/AndroidManifest.xml
+++ b/app-mini/src/main/AndroidManifest.xml
@@ -20,7 +20,7 @@
             android:label="@string/title_activity_app_config"></activity>
         <activity
             android:name="org.torproject.android.tv.MiniMainActivity"
-            android:excludeFromRecents="false"
+            android:excludeFromRecents="true"
             android:launchMode="singleTop">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
