ui: prevent activty from being killed
Clearing orbot activity from "Recents" makes the tor service disconnect
from Orbot's UI.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -43,7 +43,7 @@
 
         <activity
             android:name=".OrbotMainActivity"
-            android:excludeFromRecents="false"
+            android:excludeFromRecents="true"
             android:launchMode="singleTop"
             android:exported="true">
             <intent-filter>
