--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,5 @@
 apply from: "../commons-device.gradle"
+apply plugin: 'kotlin-android'
 apply from : '../dependencies.gradle'
 
 /* gets the version name from the latest Git tag, stripping the leading v off */
@@ -16,6 +17,7 @@ android {
         applicationId "org.torproject.android"
         versionName getVersionName()
         minSdkVersion 16
+        compileSdkVersion 31
         targetSdkVersion 31
         multiDexEnabled true
     }
@@ -76,4 +78,11 @@ android {
 
     }
     namespace 'org.torproject.android'
+}
+dependencies {
+    implementation "androidx.core:core-ktx:+"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+}
+repositories {
+    mavenCentral()
 }
