--- a/orbotservice/build.gradle
+++ b/orbotservice/build.gradle
@@ -14,7 +14,7 @@ android {
 
     defaultConfig {
         minSdkVersion 16
-        targetSdkVersion 31
+        targetSdkVersion 33
     }
 
     buildTypes {
@@ -23,20 +23,21 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
-
-
-    lintOptions {
-        checkReleaseBuilds false
-        abortOnError true
-        htmlReport true
-        xmlReport false
-        textReport false
-        lintConfig file("../lint.xml")
-        disable "InvalidPackage"
+    packagingOptions {
+        resources {
+            excludes += ['META-INF/androidx.localbroadcastmanager_localbroadcastmanager.version']
+        }
     }
 
-    packagingOptions {
-        exclude 'META-INF/androidx.localbroadcastmanager_localbroadcastmanager.version'
+
+    lint {
+        abortOnError true
+        checkReleaseBuilds false
+        disable 'InvalidPackage'
+        htmlReport true
+        lintConfig file('../lint.xml')
+        textReport false
+        xmlReport false
     }
     namespace 'org.torproject.android.service'
 }
