updates to gradle and build tools

--- a/app-mini/build.gradle
+++ b/app-mini/build.gradle
@@ -45,4 +45,5 @@ android {
         )
         androidTestImplementation libs.fastlane_screengrab
     }
+    namespace 'org.torproject.android.mini'
 }
