--- a/app/build.gradle
+++ b/app/build.gradle
@@ -75,4 +75,5 @@ android {
         coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:1.1.5'
 
     }
+    namespace 'org.torproject.android'
 }
