Update core-ktx to 1.9.0

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -99,6 +99,6 @@ android {
     namespace 'org.torproject.android'
 }
 dependencies {
-    implementation "androidx.core:core-ktx:+"
+    implementation "androidx.core:core-ktx:1.9.0"
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 }
