Only build arm64-v8a for release

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,7 +49,7 @@ android {
 
     splits {
         abi {
-            universalApk true
+            universalApk false
         }
     }
     packagingOptions {
