--- a/commons-device.gradle
+++ b/commons-device.gradle
@@ -45,7 +45,7 @@ android {
         abi {
             enable true
             reset()
-            include "x86", "armeabi-v7a", "x86_64", "arm64-v8a"
+            include "arm64-v8a"
         }
     }
 
