--- a/commons-device.gradle
+++ b/commons-device.gradle
@@ -45,7 +45,7 @@ android {
         abi {
             enable true
             reset()
-            include "arm64-v8a"
+            include "arm64-v8a", "armeabi-v7a"
         }
     }
 
