--- a/appcore/build.gradle
+++ b/appcore/build.gradle
@@ -24,6 +24,7 @@ android {
 
     kotlinOptions {
         jvmTarget = '17'
+        freeCompilerArgs = ["-Xstring-concat=inline"]
     }
 
     namespace 'org.torproject.android.core'
